--- a/sass/partials/homepage.scss
+++ b/sass/partials/homepage.scss
@@ -12,6 +12,21 @@ html, body {
   margin: 0;
   min-height: 100%;
   padding: 0;
+
+  a {
+    -webkit-transition: .2s ease-in-out;
+    -moz-transition: .2s ease-in-out;
+    -o-transition: .2s ease-in-out;
+    border-bottom: 2px solid transparent;
+    color: #b8a3fd;
+    transition: .2s ease-in-out;
+
+    &:hover {
+      border-bottom: 2px solid #b8a3fd;
+      color: darken(#b8a3fd, 10%);
+      text-decoration: none;
+    }
+  }
 }
 
 .wrapper {
@@ -255,11 +270,12 @@ nav.navbar.navbar-default {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  height: 300px;
+  // height: 300px;
+  height: 90vh;
   width: auto;
-  @media(min-width: $screen-sm-min) {
-    height: 660px;
-  }
+  // @media(min-width: $screen-sm-min) {
+  //   height: 660px;
+  // }
 }
 
 .gallery_image_1 {
