--- a/sass/coming_soon.scss
+++ b/sass/coming_soon.scss
@@ -43,6 +43,12 @@ h3 {
   margin-bottom: 30px;
 }
 
+.bring-to-front > a,
+p {
+  position: relative;
+  z-index: 10;
+}
+
 //********** lists *********//
 ul.skill-list {
   list-style-type: none;
